gradle 7.5, .editorconfig + apply style changes